# python-api

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: gcp-deploy.yaml  scheduled-backups.yaml
app/: main.py
app/core/: auth.py  config.py  firebase.py  firestore.py  links.py  settings.py  supabase.py
app/routers/: notifications_router.py
app/services/notifications/: fcm.py  models.py  notification_service.py
firebase/functions/: index.js  package.json
firebase/public/: 404.html  index.html
firebase/public/.well-known/: apple-app-site-association  assetlinks.json
supabase/: config.toml
supabase/migrations/: 202501010000_mosayic_initializer.sql
tests/: conftest.py  test_auth.py
tests/fixtures/: __init__.py  auth_fixtures.py  database_fixtures.py
